// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL Type: Battlefield fetch battlefield's cells' scalar values 1`] = `
Object {
  "battlefield": Object {
    "cells": Array [],
  },
}
`;

exports[`GraphQL Type: Battlefield fetch battlefield's only scalar values 1`] = `
Object {
  "battlefield": Object {
    "id": "1",
  },
}
`;

exports[`GraphQL Type: Battlefield fetch battlefield's owner's scalar values 1`] = `
Object {
  "battlefield": Object {
    "owner": Object {
      "email": "user2@example.com",
      "id": "3",
    },
  },
}
`;
